@@ -1,4 +1,5 @@
 \chapter{Parameters}
+\label{sec:parameters}
 \index{parameters}
 
 \dolfin{} keeps a global database of parameters that control the
