@@ -1,3 +1,4 @@
+ - Fix cout for empty matrix
  - Change dolfin_start() --> dolfin_end()
  - Add chapters to manual: reference about, elements, installation, contributing, license
  - Use new template fenicsmanual.cls for manual
